--- a/Schedule/Base.lproj/Main.storyboard
+++ b/Schedule/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13526"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -101,6 +102,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Calender"/>
+                                <connections>
+                                    <segue destination="coS-90-xE6" kind="show" id="1sC-hB-yM0"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97647064924240112" green="0.97647064924240112" blue="0.97647064924240112" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -143,16 +147,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wc7-lu-YE8">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="16" y="72" width="343" height="575"/>
+                                <color key="backgroundColor" red="0.81187152862548828" green="0.81954985857009888" blue="0.82353013753890991" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserPeriodCell" id="4po-Um-g61">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4po-Um-g61" id="Qnz-L4-78I">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -175,13 +181,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.97647064924240112" green="0.97647064924240112" blue="0.97647064924240112" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="wc7-lu-YE8" firstAttribute="bottom" secondItem="GjF-dr-cPu" secondAttribute="bottom" id="3Pr-GX-P1S"/>
-                            <constraint firstItem="wc7-lu-YE8" firstAttribute="leading" secondItem="GjF-dr-cPu" secondAttribute="leading" id="FyC-C9-q4G"/>
+                            <constraint firstItem="wc7-lu-YE8" firstAttribute="bottom" secondItem="GjF-dr-cPu" secondAttribute="bottom" constant="-20" id="3Pr-GX-P1S"/>
+                            <constraint firstItem="wc7-lu-YE8" firstAttribute="leading" secondItem="GjF-dr-cPu" secondAttribute="leading" constant="16" id="FyC-C9-q4G"/>
                             <constraint firstItem="noL-1A-cye" firstAttribute="top" secondItem="GjF-dr-cPu" secondAttribute="top" id="GYv-UT-9WJ"/>
                             <constraint firstItem="noL-1A-cye" firstAttribute="centerX" secondItem="W0D-Jj-blM" secondAttribute="centerX" id="MIP-IE-tK5"/>
                             <constraint firstItem="noL-1A-cye" firstAttribute="leading" secondItem="GjF-dr-cPu" secondAttribute="leading" id="bWB-oe-qzu"/>
-                            <constraint firstItem="wc7-lu-YE8" firstAttribute="top" secondItem="noL-1A-cye" secondAttribute="bottom" id="kKh-Nh-uOa"/>
-                            <constraint firstItem="wc7-lu-YE8" firstAttribute="trailing" secondItem="GjF-dr-cPu" secondAttribute="trailing" id="pSO-HC-f3M"/>
+                            <constraint firstItem="wc7-lu-YE8" firstAttribute="top" secondItem="noL-1A-cye" secondAttribute="bottom" constant="8" id="kKh-Nh-uOa"/>
+                            <constraint firstItem="wc7-lu-YE8" firstAttribute="trailing" secondItem="GjF-dr-cPu" secondAttribute="trailing" constant="-16" id="pSO-HC-f3M"/>
                             <constraint firstItem="noL-1A-cye" firstAttribute="trailing" secondItem="GjF-dr-cPu" secondAttribute="trailing" id="wRx-hh-vGA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GjF-dr-cPu"/>
@@ -194,6 +200,88 @@
                 <exit id="YDH-wv-Mvx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1028" y="132.68365817091455"/>
+        </scene>
+        <!--Calendar Collection View Controller-->
+        <scene sceneID="Z2B-kD-GOc">
+            <objects>
+                <viewController id="coS-90-xE6" customClass="CalendarCollectionViewController" customModule="Schedule" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cDp-Ps-SxO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z1g-sy-CiZ">
+                                <rect key="frame" x="16" y="72" width="343" height="575"/>
+                                <color key="backgroundColor" red="0.80402845144271851" green="0.81170672178268433" blue="0.81568706035614014" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="575" id="fiI-gj-ybZ"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zY1-HD-3DG">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarDayCell" id="0ur-Gc-pAX">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="618" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ib1-5F-jbF">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="ib1-5F-jbF" firstAttribute="top" secondItem="0ur-Gc-pAX" secondAttribute="top" id="KnC-Y8-9Qh"/>
+                                            <constraint firstAttribute="trailing" secondItem="ib1-5F-jbF" secondAttribute="trailing" id="Nhg-ho-pf3"/>
+                                            <constraint firstAttribute="bottom" secondItem="ib1-5F-jbF" secondAttribute="bottom" id="VNu-fg-2Tm"/>
+                                            <constraint firstItem="ib1-5F-jbF" firstAttribute="leading" secondItem="0ur-Gc-pAX" secondAttribute="leading" id="klp-S7-a3P"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="coS-90-xE6" id="Nag-Fb-Ccp"/>
+                                    <outlet property="delegate" destination="coS-90-xE6" id="SjJ-mS-Vdy"/>
+                                </connections>
+                            </collectionView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRr-8N-f4j">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Calendar" id="kl2-3k-oyO">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="6Fn-L9-EAn">
+                                            <connections>
+                                                <segue destination="Jeg-vt-2no" kind="unwind" unwindAction="exitCalendar:" id="nb0-o2-G1W"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97647064924240112" green="0.97647064924240112" blue="0.97647064924240112" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="z1g-sy-CiZ" firstAttribute="top" secondItem="YRr-8N-f4j" secondAttribute="bottom" constant="8" id="JYs-Ee-s4k"/>
+                            <constraint firstItem="hEl-KP-kAW" firstAttribute="trailing" secondItem="z1g-sy-CiZ" secondAttribute="trailing" constant="16" id="R24-Ah-jde"/>
+                            <constraint firstItem="hEl-KP-kAW" firstAttribute="bottom" secondItem="z1g-sy-CiZ" secondAttribute="bottom" constant="20" id="ctd-IT-g8F"/>
+                            <constraint firstItem="YRr-8N-f4j" firstAttribute="leading" secondItem="cDp-Ps-SxO" secondAttribute="leading" id="dM3-55-onR"/>
+                            <constraint firstItem="YRr-8N-f4j" firstAttribute="centerX" secondItem="z1g-sy-CiZ" secondAttribute="centerX" id="hah-uq-Q26"/>
+                            <constraint firstItem="z1g-sy-CiZ" firstAttribute="leading" secondItem="hEl-KP-kAW" secondAttribute="leading" constant="16" id="yff-2z-9YL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hEl-KP-kAW"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="z1g-sy-CiZ" id="aWX-Iu-XDV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VK5-hE-G4I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Jeg-vt-2no" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1028" y="833.43328335832086"/>
         </scene>
     </scenes>
     <resources>
