--- a/Schedule/Base.lproj/Main.storyboard
+++ b/Schedule/Base.lproj/Main.storyboard
@@ -26,9 +26,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="MQI-Le-kHf">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="MQI-Le-kHf">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ptp-53-yZE">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -52,7 +51,6 @@
                                 <color key="backgroundColor" red="0.91658803502920316" green="0.91658803502920316" blue="0.91658803502920316" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="95" id="ldu-vf-j8d"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="q0R-tG-Q9w"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="CooleyCasual" family="CooleyCasual" pointSize="32"/>
                                 <nil key="textColor"/>
@@ -63,7 +61,6 @@
                                 <color key="backgroundColor" red="0.91764706373214722" green="0.91764718294143677" blue="0.91764706373214722" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="72" id="080-xE-bzM"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="sW1-kB-MKv"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="CooleyCasual" family="CooleyCasual" pointSize="32"/>
                                 <nil key="textColor"/>
@@ -74,7 +71,6 @@
                                 <color key="backgroundColor" red="0.91764706373214722" green="0.91764718294143677" blue="0.91764706373214722" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="72" id="NUz-aN-JDP"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="UF0-PZ-fol"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="CooleyCasual" family="CooleyCasual" pointSize="32"/>
                                 <nil key="textColor"/>
@@ -85,7 +81,7 @@
                                 <color key="backgroundColor" red="0.91764706373214722" green="0.91764718294143677" blue="0.91764706373214722" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="57" id="MFX-3s-f24"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="a1N-TJ-nUL"/>
+                                    <constraint firstAttribute="width" constant="130" id="a1N-TJ-nUL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Edit Schedule"/>
@@ -98,7 +94,7 @@
                                 <color key="backgroundColor" red="0.91764706373214722" green="0.91764718294143677" blue="0.91764706373214722" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="57" id="3Gf-Hm-m9c"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="iBm-dW-i4Y"/>
+                                    <constraint firstAttribute="width" constant="130" id="iBm-dW-i4Y"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Calender"/>
@@ -109,20 +105,27 @@
                         </subviews>
                         <color key="backgroundColor" red="0.97647064924240112" green="0.97647064924240112" blue="0.97647064924240112" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="MQI-Le-kHf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5gY-ld-Uhf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EMJ-6p-Aoe" secondAttribute="bottom" constant="20" id="67G-75-6Dr"/>
-                            <constraint firstItem="4fs-2f-E1I" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="68m-BN-Nkp"/>
+                            <constraint firstItem="cxY-Xp-bBx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="9TS-KR-ZOS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4fs-2f-E1I" secondAttribute="trailing" constant="16" id="A1R-MH-yK9"/>
                             <constraint firstItem="ptp-53-yZE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DA4-b6-sXk"/>
+                            <constraint firstItem="4fs-2f-E1I" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="E2e-WR-VUf"/>
+                            <constraint firstItem="vnh-7m-UjO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="J5F-qc-3FG"/>
                             <constraint firstItem="cxY-Xp-bBx" firstAttribute="top" secondItem="vnh-7m-UjO" secondAttribute="bottom" constant="8" id="NmN-td-KoD"/>
                             <constraint firstItem="4fs-2f-E1I" firstAttribute="top" secondItem="cxY-Xp-bBx" secondAttribute="bottom" constant="8" id="R6W-Zq-rWO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="83q-QD-tnu" secondAttribute="bottom" constant="20" id="RZe-ml-9fw"/>
                             <constraint firstItem="ptp-53-yZE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="T6K-QR-K8M"/>
-                            <constraint firstItem="cxY-Xp-bBx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xk7-sv-Ua5"/>
+                            <constraint firstItem="MQI-Le-kHf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="XrN-Y5-6M6"/>
                             <constraint firstItem="EMJ-6p-Aoe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ZJ3-6N-NWC"/>
+                            <constraint firstItem="MQI-Le-kHf" firstAttribute="top" secondItem="ptp-53-yZE" secondAttribute="bottom" id="Zmf-ed-aov"/>
                             <constraint firstItem="vnh-7m-UjO" firstAttribute="top" secondItem="ptp-53-yZE" secondAttribute="bottom" constant="23" id="aMq-Kd-Vu6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cxY-Xp-bBx" secondAttribute="trailing" constant="16" id="ahD-aq-hc2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="83q-QD-tnu" secondAttribute="trailing" constant="16" id="cWE-gI-bUu"/>
                             <constraint firstItem="ptp-53-yZE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cdp-kH-XQZ"/>
+                            <constraint firstItem="MQI-Le-kHf" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="enq-1A-ZCN"/>
                             <constraint firstItem="ptp-53-yZE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="j3Q-d1-bH2"/>
-                            <constraint firstItem="vnh-7m-UjO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wCq-Ju-uh5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vnh-7m-UjO" secondAttribute="trailing" constant="16" id="jAf-iZ-s3M"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
