--- a/Schedule/Base.lproj/Main.storyboard
+++ b/Schedule/Base.lproj/Main.storyboard
@@ -33,9 +33,9 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Schedule" id="tV4-uS-7xy">
-                                        <barButtonItem key="leftBarButtonItem" title="User" id="Vvm-ZF-qbB">
+                                        <barButtonItem key="leftBarButtonItem" title="Settings" id="Vvm-ZF-qbB">
                                             <connections>
-                                                <action selector="setUserID:" destination="BYZ-38-t0r" id="RHh-Ue-rve"/>
+                                                <action selector="openSettings:" destination="BYZ-38-t0r" id="7Op-pW-C2r"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="KGp-RB-UN4">
