--- a/Schedule/Base.lproj/Main.storyboard
+++ b/Schedule/Base.lproj/Main.storyboard
@@ -10,6 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Consola.ttf">
+            <string>Consolas</string>
+        </array>
         <array key="CooleyCasual.ttf">
             <string>CooleyCasual</string>
         </array>
@@ -135,6 +138,7 @@
                         <outlet property="openCalenderButton" destination="83q-QD-tnu" id="y4i-gK-fQm"/>
                         <outlet property="schoolStartEndLabel" destination="cxY-Xp-bBx" id="kzS-Tc-JtS"/>
                         <outlet property="tomorrowStartTimeLabel" destination="4fs-2f-E1I" id="AS4-Dh-GZU"/>
+                        <segue destination="Sf9-3T-Ivb" kind="show" identifier="openDeveloperView" id="gsL-Vl-r2x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -216,6 +220,80 @@
                 <exit id="YDH-wv-Mvx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1028" y="132.68365817091455"/>
+        </scene>
+        <!--Developer View Controller-->
+        <scene sceneID="aX9-EO-8te">
+            <objects>
+                <viewController id="Sf9-3T-Ivb" customClass="DeveloperViewController" customModule="Schedule" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IKv-S7-Vaw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfz-gB-adq">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Developer" id="cv6-lE-Xq4">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="e9x-gm-P5b">
+                                            <connections>
+                                                <segue destination="NlU-j4-ypZ" kind="unwind" unwindAction="exitDeveloperView:" id="5Fi-Zn-lGH"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="8MH-EH-lqJ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.84999999999999998" contentMode="scaleToFill" editable="NO" text="Loading log..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QJX-hD-RMY">
+                                <rect key="frame" x="16" y="117" width="343" height="163"/>
+                                <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="163" id="9fS-ld-Wce"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Consolas" family="Consolas" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="51q-RI-lmd">
+                                <rect key="frame" x="122" y="323" width="130" height="57"/>
+                                <color key="backgroundColor" red="0.91764706373214722" green="0.91764718294143677" blue="0.91764706373214722" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="HKJ-OL-2pv"/>
+                                    <constraint firstAttribute="width" constant="130" id="yRI-if-WIZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Clear CoreData"/>
+                                <connections>
+                                    <action selector="clearCoreData:" destination="Sf9-3T-Ivb" eventType="touchUpInside" id="zGm-aP-oDR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97647064924240112" green="0.97647064924240112" blue="0.97647064924240112" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="51q-RI-lmd" firstAttribute="centerX" secondItem="IKv-S7-Vaw" secondAttribute="centerX" id="1q2-oZ-apM"/>
+                            <constraint firstItem="jfz-gB-adq" firstAttribute="centerX" secondItem="IKv-S7-Vaw" secondAttribute="centerX" id="3ig-R4-moq"/>
+                            <constraint firstItem="8MH-EH-lqJ" firstAttribute="trailing" secondItem="bkH-Nc-guQ" secondAttribute="trailing" id="8zh-wS-NnN"/>
+                            <constraint firstItem="jfz-gB-adq" firstAttribute="trailing" secondItem="bkH-Nc-guQ" secondAttribute="trailing" id="Fsc-xV-R3O"/>
+                            <constraint firstItem="8MH-EH-lqJ" firstAttribute="bottom" secondItem="bkH-Nc-guQ" secondAttribute="bottom" id="LvK-cW-YJI"/>
+                            <constraint firstItem="bkH-Nc-guQ" firstAttribute="trailing" secondItem="QJX-hD-RMY" secondAttribute="trailing" constant="16" id="Qha-Nx-gDq"/>
+                            <constraint firstItem="8MH-EH-lqJ" firstAttribute="top" secondItem="jfz-gB-adq" secondAttribute="bottom" id="Utq-6a-zEY"/>
+                            <constraint firstItem="QJX-hD-RMY" firstAttribute="leading" secondItem="bkH-Nc-guQ" secondAttribute="leading" constant="16" id="inj-xQ-qvB"/>
+                            <constraint firstItem="jfz-gB-adq" firstAttribute="top" secondItem="bkH-Nc-guQ" secondAttribute="top" id="jhO-jF-r99"/>
+                            <constraint firstItem="8MH-EH-lqJ" firstAttribute="leading" secondItem="bkH-Nc-guQ" secondAttribute="leading" id="jxi-XH-vIt"/>
+                            <constraint firstItem="jfz-gB-adq" firstAttribute="leading" secondItem="bkH-Nc-guQ" secondAttribute="leading" id="kS9-SH-jlM"/>
+                            <constraint firstItem="51q-RI-lmd" firstAttribute="top" secondItem="QJX-hD-RMY" secondAttribute="bottom" constant="43" id="uBg-tx-b1C"/>
+                            <constraint firstItem="QJX-hD-RMY" firstAttribute="top" secondItem="jfz-gB-adq" secondAttribute="bottom" constant="53" id="xmU-Mv-hkd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bkH-Nc-guQ"/>
+                    </view>
+                    <connections>
+                        <outlet property="clearCoreDataButton" destination="51q-RI-lmd" id="1PE-Kc-BRU"/>
+                        <outlet property="logTextView" destination="QJX-hD-RMY" id="ZxR-zz-V6Q"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Law-9L-K1H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="NlU-j4-ypZ" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="903.59820089955031"/>
         </scene>
         <!--Calendar Collection View Controller-->
         <scene sceneID="Z2B-kD-GOc">
@@ -310,7 +388,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VK5-hE-G4I" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Jeg-vt-2no" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1028" y="833.43328335832086"/>
+            <point key="canvasLocation" x="1028" y="905"/>
         </scene>
     </scenes>
     <resources>
